fixed spacing

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -997,6 +997,9 @@
     margin-top: 0;
     padding-top: 0;
   }
+  .mob-pt-0 {
+    padding-top: 0 !important;
+  }
 
   .key_innner {
     padding: 50px 0;
